add methods notebook store, update. add docs. add tests
